--- a/react-basics copy.htm
+++ b/react-basics copy.htm
@@ -13,23 +13,13 @@
 
     <script src="https://unpkg.com/supersimpledev/babel.js"></script>
 
+    <script src="https://unpkg.com/supersimpledev/dayjs.js"></script>
+    
     <script type="text/babel">
-       const socks = 10;
-       const tees = 8*2;
-       const productCost = socks + tees;
-       const shippingCost = 5;
-
-       const div = (
-        <div>
-          <p>Product cost: ${productCost}</p>
-          <p>Shipping cost: ${shippingCost}</p>
-          <p>Total cost: ${shippingCost + productCost}</p>
-          <button>Place your order</button>
-        </div>
-      )
+      console.log(dayjs().format('MMMM D'))
 
       const container = document.querySelector('.js-container');
-      ReactDOM.createRoot(container).render(div);
+      ReactDOM.createRoot(container).render('Practice');
     </script>
 
   </body>
