--- a/react-basics.htm
+++ b/react-basics.htm
@@ -14,13 +14,11 @@
     <script src="https://unpkg.com/supersimpledev/babel.js"></script>
 
     <script type="text/babel">
-        const button = <button>Hey butt</button>;
-        const para = <p>This is the paragraph...</p>
 
         const div = (
             <div>
-                <button>Hey butt</button>
-                <p>This is the paragraph... {3+2}</p>
+                <button>button</button>
+                <p>This is the paragraph - {3+2}</p>
             </div>
         )
 
