--- a/react-basics copy.htm
+++ b/react-basics copy.htm
@@ -17,8 +17,8 @@
     
     <script type="text/babel">
       console.log(dayjs().format('MMMM D'))
-      const currentDate = dayjs().format('MMMM D');
-      const para = <p>Today is {currentDate}</p>
+  
+      const para = <p>Current time: {dayjs().format('HH:mm:ss')}</p>
 
       const container = document.querySelector('.js-container');
       ReactDOM.createRoot(container).render(para);
